tests/fixtures/errors/type_mismatch_add.lazy
result = 5 + "hello"
result
